--- a/projectgame/src/TattoolItem.css
+++ b/projectgame/src/TattoolItem.css
@@ -1,7 +1,7 @@
 
 
 .tattoo-item {
-  width: 300px;
+  width: 40%;
   margin: 10px;
   border: 2px solid black;
   display: flex;
@@ -9,10 +9,11 @@
   justify-content: center;
   flex-direction: column;
   margin: 2rem;
+  overflow: hidden;
 }
 
 .tattoo-item img {
-  width: auto;
+  width: 100%;
   height: 200px;
 }
 
