--- a/projectgame/src/content/contentimg.css
+++ b/projectgame/src/content/contentimg.css
@@ -15,8 +15,9 @@
 }
 
 .box {
-    background-color: #f0f0f0; 
+    /* background-color: #f0f0f0; */
+
+
     /* padding: 20px;  */
     text-align: center; 
 }
-
