--- a/React/imagechange/src/App.css
+++ b/React/imagechange/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-imagechagne{
+  border: 2px solid black;
+  width: 100%;
+  height: 800px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid black;
+  width: 1000px;
+  height: 400px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+nav .Choice{
+  display: grid;
+  grid-template-columns: repeat(2,230px);
+  /* border: 2px solid black; */
+}
+
+nav .display{
+  width: 600px;
+  height: 300px;
+  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+nav .Choice .choice-click{
+  border: 2px solid black;
+  width: 200px;
+}
+nav .Choice .choice-click img{
+  /* border: 2px solid black; */
+  width: 100%;
+}
+
+.Image-display{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.Image-display img{
+  width: 100%;
+  border: 2px solid black;
 }
