--- a/projectgame/src/App.css
+++ b/projectgame/src/App.css
@@ -1,32 +1,46 @@
 /* .App .Header{
   margin-bottom: 1rem;
 } */
-
-.App .Image{
+body{
+  
+}
+.App .Image {
   width: 100%;
-  height: 500px;
+  height: 300px;
   background-color: aqua;
   background-image: url('../public/League_of_league.jpg');
   background: position 10%;
   background-size: 100%;
 
-}
-.App{
-  background-color: #ffffff;
-  height: 100%;
+
 }
 
-.Game{
+.App {
+  height: 00%;
+  background-color: #282c34;
+}
+
+.Game {
   display: flex;
   justify-content: center;
   align-items: center;
 }
- 
-.Sild{
+
+/* .Sild{
  height: 500px;
  width: 1200px;
+ background-color: aquamarine ;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
-} 
+}  */
+
+/* .display_totalgame{
+  height: 600px;
+  background-color: #282c34;
+} */
+
+.fixed-width {
+  min-height:400px; /* ปรับความยาวตามที่คุณต้องการ */
+}
