--- a/projectgame/src/RecommendGame/RecommendGame.css
+++ b/projectgame/src/RecommendGame/RecommendGame.css
@@ -1,4 +1,4 @@
-.GameSlide{
+.GameSlide {
     height: 353px;
     width: 940px;
     position: relative;
@@ -7,15 +7,15 @@
 }
 
 .GameSlide .GameImage {
-    width:81% ;
+    width: 81%;
     /* height: 100%; */
     /* position: relative; */
-     position: absolute;
-    
+    position: absolute;
+
 }
 
-.GameSlide .GameImage img{
-    width:100%;
+.GameSlide .GameImage img {
+    width: 100%;
     font-size: larger;
     /* height: 100%; */
 
@@ -31,7 +31,72 @@
 }
 
 
-.swiper{
-    width: 940px;
+.swiper {
+    width: 1000px;
     height: 400px;
+    margin-top: 10rem;
+    
+}
+
+/*======================================================*/
+.container-imagechagne {
+    /* background-color: aqua; */
+    height: 400px;
+    width: 900px;
+    margin-left: 50px;
+
+}
+
+.container-imagechagne nav {
+    display: flex;
+    flex-direction: row;
+    /* gap: 2rem; */
+    /* align-items: center;
+    justify-content: center; */
+    height: 100%;
+    width: 100%;
+    border: 2px solid ;
+    box-shadow: -1px 1px 9px 2px rgba(0, 0, 0, 1);
+    -webkit-box-shadow: -1px 1px 9px 2px rgba(0, 0, 0, 1);
+    -moz-box-shadow: -1px 1px 9px 2px rgba(0, 0, 0, 1);
+}
+
+.container-imagechagne .Choice {
+    /* background-color: rgb(214, 80, 22); */
+    /* border: 2px solid black; */
+    width: 50%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+
+}
+
+.container-imagechagne .Choice .choice-click {
+    width: 200px;
+    margin: 4px;
+}
+
+.container-imagechagne .Choice .choice-click img {
+    width: 100%;
+}
+
+.container-imagechagne .display {
+    /* background-color: rgb(30, 231, 19);
+    border: 2px solid black; */
+    width: 50%;
+    height: 100%;
+    float: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-imagechagne .display .Image-display {
+    width: 90%;
+}
+
+.container-imagechagne .display .Image-display img {
+    width: 100%;
 }
