--- a/projectgame/src/gamedetail.css
+++ b/projectgame/src/gamedetail.css
@@ -16,6 +16,10 @@
     margin-top: 2rem;
 }
 
+/* .section .current-path{
+    margin-left: -40px;
+} */
+
 .section .Display_game .Namegame{
     color: #ffffff;
     padding-left: 2rem;
