--- a/projectgame/src/App.css
+++ b/projectgame/src/App.css
@@ -2,14 +2,15 @@
   margin-bottom: 1rem;
 } */
 
-.App .Image {
+body {
   width: 100%;
   height: 300px;
   background-color: aqua;
   background-image: url('../public/League_of_league.jpg');
-  background: position 10%;
-  background-size: 100%;
-
+  background-position: center;
+  background-attachment: fixed;
+  /* background-size: 100%; */
+  background-size: cover; 
 
 }
 .App {
@@ -50,4 +51,5 @@
 
 .RecommendGame_slid{
   margin-bottom: 3rem;
+  padding-top: 3rem;
 }
